# ffxiv-craft-data

./: .gitattributes  .gitignore  .gitmodules  README.md  build.ps1  main.py  missing_recipes.json  pyproject.toml  test.py  update.ps1  update.sh
CraftData/: CraftData.deps.json
CraftData/Debug/net7.0/: config.txt  item.csv  log.txt  test.csv
CraftData/Debug/net7.0/export/: Recipe.csv  RecipeLevelTable.csv
CraftData/Release/net7.0/win-x64/publish/: CraftData.deps.json  config.json  data.csv  item.csv  log.txt  recipe.csv
CraftDataSrc/: SaintCoinach.deps.json
CraftDataSrc/CraftData/: CraftData.sln
CraftDataSrc/CraftData/CraftData/: CraftData.csproj  Program.cs
export/: Alchemist.json  Armorer.json  Blacksmith.json  Carpenter.json  Culinarian.json  Goldsmith.json  Leatherworker.json  Weaver.json
import/ko/: missing_recipes.json
import/ko/recipedb/: Alchemist.json  Armorer.json  Blacksmith.json  Carpenter.json  Culinarian.json  Goldsmith.json  Leatherworker.json  Weaver.json
recipe/: RecipeDE.csv  RecipeFR.csv
src/CraftDataSrc/: Definitions  SaintCoinach.deps.json  SaintCoinach.dll.config  SaintCoinach.runtimeconfig.json
src/CraftDataSrc/CraftData/CraftData/: CraftData.csproj
